syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";
import "dex/pair.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message Price {
  
  uint64 snapshotTimestampInSeconds = 1 [
    (gogoproto.jsontag) = "snapshot_timestamp_in_seconds"
  ];
  string price = 2 [
      (gogoproto.moretags)   = "yaml:\"price\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "price"
  ];
  Pair pair = 3 [
    (gogoproto.jsontag) = "pair"
  ];
}

message PriceCandlestick {
  uint64 beginTimestamp = 1 [
    (gogoproto.jsontag) = "begin_timestamp"
  ];
  uint64 endTimestamp = 2 [
    (gogoproto.jsontag) = "end_timestamp"
  ];
  string open = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.jsontag) = "open"
  ];
  string high = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.jsontag) = "high"
  ];
  string low = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.jsontag) = "low"
  ];
  string close = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.jsontag) = "close"
  ];
  string volume = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.jsontag) = "volume"
  ];
}
